--- a/app/components/users/users.component.html
+++ b/app/components/users/users.component.html
@@ -21,7 +21,7 @@
                     <button (click)="edit(user)" 
                             type="button" 
                             class="btn btn-primary btn-sm">Edit</button>  
-                    <button (click)="edit(user)"
+                    <button (click)="delete(user)"
                             type="button" 
                             class="btn btn-danger btn-sm">Delete</button>
                 </td>
@@ -29,4 +29,5 @@
         </tbody>
     </table>
 </div>
+<template  ngbModalContainer></template>
 
